--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,10 @@
 {
     "parser": "@typescript-eslint/parser",
     "extends": [
-      "plugin:@typescript-eslint/recommended",
+      "plugin:@typescript-eslint/recommended"
     ],
     "parserOptions": {
       "ecmaVersion": 2021,
       "sourceType": "module"
-    },
-    "rules": {
-               // custom rules here
     }
 }
